// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularGauge should render with 0% 1`] = `
<div>
  <div
    class="gauge"
  >
    <div
      aria-hidden="true"
      class="gauge-circle"
      style="background-color: rgb(64, 159, 255);"
    >
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(0deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(90deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(180deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(270deg);"
      />
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(0); background-color: rgb(64, 159, 255);"
        />
      </div>
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(0); background-color: rgb(64, 159, 255);"
        />
      </div>
    </div>
    <div
      class="gauge-center"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="gauge-readout"
      >
        <span
          class="gauge-value"
        >
          0
        </span>
        <span
          class="gauge-percent-sign"
        >
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CircularGauge should render with 1% 1`] = `
<div>
  <div
    class="gauge"
  >
    <div
      aria-hidden="true"
      class="gauge-circle"
      style="background-color: rgb(64, 159, 255);"
    >
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(3.6deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(90deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(180deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(270deg);"
      />
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
      <div
        class="gauge-endcap-container"
        style="transform: rotate(3.6deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
    </div>
    <div
      class="gauge-center"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="gauge-readout"
      >
        <span
          class="gauge-value"
        >
          1
        </span>
        <span
          class="gauge-percent-sign"
        >
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CircularGauge should render with 1% and an offset origin 1`] = `
<div>
  <div
    class="gauge"
  >
    <div
      aria-hidden="true"
      class="gauge-circle"
      style="background-color: rgb(64, 159, 255); transform: rotate(30);"
    >
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(3.6deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(90deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(180deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(270deg);"
      />
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
      <div
        class="gauge-endcap-container"
        style="transform: rotate(3.6deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
    </div>
    <div
      class="gauge-center"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="gauge-readout"
      >
        <span
          class="gauge-value"
        >
          1
        </span>
        <span
          class="gauge-percent-sign"
        >
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CircularGauge should render with 50% 1`] = `
<div>
  <div
    class="gauge"
  >
    <div
      aria-hidden="true"
      class="gauge-circle"
      style="background-color: rgb(64, 159, 255);"
    >
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(3.6deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(90deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(180deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(270deg);"
      />
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
      <div
        class="gauge-endcap-container"
        style="transform: rotate(3.6deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
    </div>
    <div
      class="gauge-center"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="gauge-readout"
      >
        <span
          class="gauge-value"
        >
          1
        </span>
        <span
          class="gauge-percent-sign"
        >
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CircularGauge should render with 100% 1`] = `
<div>
  <div
    class="gauge"
  >
    <div
      aria-hidden="true"
      class="gauge-circle"
      style="background-color: rgb(64, 159, 255);"
    >
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(360deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(360deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(360deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(360deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(64, 159, 255); transform: rotate(0deg);"
      />
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
      <div
        class="gauge-endcap-container"
        style="transform: rotate(360deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
    </div>
    <div
      class="gauge-center"
      style="background-color: rgb(255, 255, 255);"
    >
      <div
        class="gauge-readout"
      >
        <span
          class="gauge-value"
        >
          100
        </span>
        <span
          class="gauge-percent-sign"
        >
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CircularGauge should render with custom children 1`] = `
<div>
  <div
    class="gauge"
  >
    <div
      aria-hidden="true"
      class="gauge-circle"
      style="background-color: rgb(64, 159, 255);"
    >
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(277.2deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(277.2deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(277.2deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(226, 228, 230); transform: rotate(277.2deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(64, 159, 255); transform: rotate(0deg);"
      />
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
      <div
        class="gauge-endcap-container"
        style="transform: rotate(277.2deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(64, 159, 255);"
        />
      </div>
    </div>
    <div
      class="gauge-center"
      style="background-color: rgb(255, 255, 255);"
    >
      Custom 
      <strong>
        children
      </strong>
    </div>
  </div>
</div>
`;

exports[`CircularGauge should render with custom colors 1`] = `
<div>
  <div
    class="gauge"
  >
    <div
      aria-hidden="true"
      class="gauge-circle"
      style="background-color: rgb(186, 218, 85);"
    >
      <div
        class="gauge-background-panel"
        style="background-color: rgb(0, 177, 236); transform: rotate(36deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(0, 177, 236); transform: rotate(90deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(0, 177, 236); transform: rotate(180deg);"
      />
      <div
        class="gauge-background-panel"
        style="background-color: rgb(0, 177, 236); transform: rotate(270deg);"
      />
      <div
        class="gauge-endcap-container"
        style="transform: rotate(0deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(186, 218, 85);"
        />
      </div>
      <div
        class="gauge-endcap-container"
        style="transform: rotate(36deg);"
      >
        <div
          class="gauge-endcap"
          style="transform: scaleX(1); background-color: rgb(186, 218, 85);"
        />
      </div>
    </div>
    <div
      class="gauge-center"
      style="background-color: rgb(30, 30, 30);"
    >
      <div
        class="gauge-readout"
      >
        <span
          class="gauge-value"
        >
          10
        </span>
        <span
          class="gauge-percent-sign"
        >
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;
